# liquid-book

./: .env  .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  deploy-balance.sh  deploy.sh  deploy_balance.sh  deploy_bitmap.sh  deploy_lending.sh  deploy_mocks.sh  deploy_run.sh  generate_abi.txt  generate_abi_json.txt  test.sh  test_balance.txt  test_call.txt  test_deploy_init.txt  test_deposit_balance.sh  test_engine.sh  test_init_all.sh  test_init_all.txt  test_lending.txt  test_limit_order.txt  test_limit_orders.sh  test_market_orders.sh  test_place_orders.sh  test_tick.sh  test_transfer_locked.sh
abis/: bitmap-manager.json  bitmap-manager.sol  engine.json  engine.sol  matcher.json  matcher.sol  order-manager.sol  tick-manager.json  tick-manager.sol
balance-manager/: Cargo.toml
balance-manager/src/: lib.rs  main.rs
bitmap/: Cargo.toml  README.md  interface.sol
bitmap/.github/: pull_request_template.md
bitmap/examples/: counter.rs
bitmap/src/: lib.rs  main.rs  mod.rs
bitmap/src/maths/: tick_bitmap.rs
bitmap/src/order_book/: bit_math.rs  mod.rs  tick_bitmap.rs
bitmap/tests/: bitmap_test.rs  bitmap_tests.rs
contracts/: balance-manager.json  balance-manager.sol  balance-manager.ts  bitmap.json  bitmap.sol  bitmap.ts  engine.json  engine.sol  engine.ts  matcher.sol  mock-usdc.json  mock-usdc.sol  mock-usdc.ts  mock-weth.json  mock-weth.sol  mock-weth.ts  order.json  order.sol  order.ts  pool-manager.json  pool-manager.sol  pool-manager.ts  pool-orderbook.json  pool-orderbook.sol  pool-orderbook.ts  tick.json  tick.sol  tick.ts
counter/: Cargo.toml
counter/src/: lib.rs  mod.rs
counter/tests/: counter_test.rs
engine/: Cargo.toml  README.md  interface.sol
engine/examples/: counter.rs
engine/src/: lib.rs  main.rs
indexer/: package.json  pnpm-lock.yaml  ponder.config.ts  ponder.schema.ts
indexer/abis/: BitmapManagerABI.ts  engine.json  (+8 more)
lending-execute/: Cargo.toml  interface.sol  test_call.txt
matcher/: Cargo.toml
mock-weth/: .env.example
order/: Cargo.toml  README.md  interface.sol
order-manager/: Cargo.toml
pool-manager/: Cargo.toml
pool-orderbook/: Cargo.toml
src/: lib.rs
storage/: Cargo.toml  README.md
tests/: bitmap_test.rs
tick/: Cargo.toml
tick-manager/: Cargo.toml  README.md
(+47 files in other folders)
